add dependency create Dao and user class

--- a/build.gradle
+++ b/build.gradle
@@ -25,3 +25,11 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+
+ext.arch_version = "1.0.0-alpha9-1"
+ext.support_version = "26.1.0"
+ext.constraint_layout_version = "1.0.2"
+ext.paging_version = "1.0.0-alpha1"
+ext.junit_version = "4.12"
+ext.espresso_version = "3.0.1"
